# ReLOpt

./: LICENSE  README.md  requirements.txt
Dataset/: README.md
SavedModels/: README.md
Src/GenDataset/: GenExtDataset.py  GenIRRefine.py  GenOptiIR.py  InteractionWithShell.py
Src/Model/: calcMetrics.py  fine_tune.py  infer.py  reproduce_metrics.sh  run_fine_tuning.sh  run_infer.sh
Src/Model/ModelRes/: BaseModels.json  CodeRefine_CG.json  CodeRefine_CL.json  ReLOpt_CG.json  ReLOpt_CL.json
Src/Retriever/: CMakeLists.txt  README.md
Src/Retriever/include/: AnalysisInfo.h  AttributeAnalysis.h  BBLevelUnopt2Opt.h  CollectModuleAnalysisInfo.h  FilterRegionSimilarToTarget.h  GenActionModelTrainData.h  GenAnalysisTrainData.h  GenEachFuncStatusAfterPass.h  GenFuncTrainData.h  Prepare.h  Scope.h  splitLongBBForPrompt.h  utils.h
Src/Retriever/lib/: AttributeAnalysis.cpp  BBLevelUnopt2Opt.cpp  CMakeLists.txt  CollectModuleAnalysisInfo.cpp  FilterRegionSimilarToTarget.cpp  GenActionModelTrainData.cpp  GenAnalysisTrainData.cpp  GenEachFuncStatusAfterPass.cpp  GenFuncTrainData.cpp  Main.cpp  Prepare.cpp  Scope.cpp  splitLongBBForPrompt.cpp  utils.cpp
